# hips

./: .gitignore  CMakeLists.txt  README.md
docker/: Dockerfile  README.md  entrypoint.sh  launch_hips.sh
examples/: CMakeLists.txt  data.pkl  ex_1.cc  ex_1.py  ex_2.cc  ex_2.py  ex_3.cc  ex_3.py  store.py
run/: 2S_CH4_BFER.yaml
src/: BatchReactor.h  BatchReactor_cantera.cc  BatchReactor_cantera.h  BatchReactor_cvode.cc  BatchReactor_cvode.h  CMakeLists.txt  HiPS.cc  HiPS.h  RandomGenerator.h  batchReactor_cantera.cc  batchReactor_cantera.h  batchReactor_cvode.cc  batchReactor_cvode.h  cvodeDriver.cc  cvodeDriver.h  driver.cc  hips.cc  hips.h
src/c++/: batchReactor.h  batchReactor_cantera.cc  batchReactor_cantera.h  batchReactor_cvode.cc  batchReactor_cvode.h  cgas.h  hips.cc  hips.h
src/python/: .gitignore  CMakeLists.txt  clean.sh  pycgas.pyx  pyhips.pyx  setup.py.in
test/: CMakeLists.txt  tdd.cc  test.cc  test_rxn.cc
